# cd24.github.io

./: .gitignore  404.html  CNAME  about.html  about.md  app-ajax.js  app.js  blog.html  bower.json  cd24-github-io.cabal  circle.yml  example1.html  imports.html  index.html  main-screen.html  main.css  node_db.js  papers.html  peers.csv  resume.html  routes.html  rss.xml  site.hs  stack.yaml  styles.css  work.html
CerealKiller/: CerealKiller.html  CerealKiller.unity3d  index.html
FakeFlappy/: index.html
HTMLFetch/: index.html
OLD/: app.js
Pages/: about.html  home.html  nav.html  projects.html  temp.html  webbuilds.html
PolymerElements/: NavBar.html
Posts/: posts.jsonp
Steering/: index.html
base/: about.md
components/: about-view.html  blog-posts.html  blog-preview.html  contact-view.html  home-view.html  post-modal.html  post-view.html  project-quick-view.html  projects-view.html
css/: default.css
dev/: BlogHask.hs  CustomHask.hs  Hasklettes.hs  build.sh  index.html  index_working.html
element/: elements.html  nav-bar.html
jobs/: 2015-06-05-StonyBrook.html  2015-06-05-StonyBrook.md  2016-08-20-firstorion.html  2016-08-20-firstorion.md  2017-08-31-apple.html  2017-08-31-apple.md
paperCategories/: Data.html  Security.html
papers/: 2015-04-05-mcm-submission.html
postCategories/: Misc.html  Software.html
posts/: hello-world.html  hello-world.md
resume.fld/: themedata.thmx
scripts/: main.js
site.old/: bower.json  imports.html  posts.db  routes.html  ~$resume.html
styles/: main.css
temp/: 404.html  index.html
templates/: job.html  (+5 more)
(+64 files in other folders)
