name:               cd24-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , blaze-html == 0.9.*
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
